--- a/app/templates/dmx_management.html
+++ b/app/templates/dmx_management.html
@@ -16,6 +16,12 @@
         <button onclick="stopLoop()">Ferma Loop</button>
         <button onclick="stampa()">Stampa</button>
     </div>
+    <div>
+        <button onclick="getDevicesInfo()">Info Dispositivi</button>
+        <div id="devices_info">
+            . . .
+        </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
@@ -46,8 +52,8 @@
     }
 
     // Ottiene la fase corrente
-    async function getCurrentPhase() {
-        const response = await fetch('get_current_phase');
+    async function getCurrentStatus() {
+        const response = await fetch('get_current_status');
         const data = await response.json();
         document.getElementById('current_phase_box').textContent = data.current_phase;
         if (data.is_on) 
@@ -58,6 +64,51 @@
     
     // Aggiorna la fase corrente ogni 5 secondi
     setInterval(getCurrentPhase, 5000);
+
+    // Ottiene le informazioni sui dispositivi
+    async function getDevicesInfo() {
+        const response = await fetch('get_devices_info');
+        const data = await response.json();
+        document.getElementById('devices_info').innerHTML = jsonToTable(data).outerHTML;
+    }
+
+    function jsonToTable(json) {
+        // Controlla se il JSON è un array di oggetti
+        if (!Array.isArray(json)) {
+            throw new Error('Il formato del JSON non è un array di oggetti.');
+        }
+    
+        // Crea la tabella
+        let table = document.createElement('table');
+        table.border = 1;
+    
+        let thead = document.createElement('thead');
+        let tbody = document.createElement('tbody');
+    
+        // Intestazioni della tabella
+        let headerRow = document.createElement('tr');
+        Object.keys(json[0]).forEach(key => {
+            let th = document.createElement('th');
+            th.textContent = key;
+            headerRow.appendChild(th);
+        });
+        thead.appendChild(headerRow);
+        table.appendChild(thead);
+    
+        // Righe del corpo della tabella
+        json.forEach(item => {
+            let row = document.createElement('tr');
+            Object.values(item).forEach(value => {
+                let td = document.createElement('td');
+                td.textContent = value;
+                row.appendChild(td);
+            });
+            tbody.appendChild(row);
+        });
+        table.appendChild(tbody);
+    
+        return table;
+    }
 
 </script>
 {% endblock %}
