--- a/app/templates/dmx_management.html
+++ b/app/templates/dmx_management.html
@@ -63,7 +63,7 @@
     }
     
     // Aggiorna la fase corrente ogni 5 secondi
-    setInterval(getCurrentPhase, 5000);
+    setInterval(getCurrentStatus, 5000);
 
     // Ottiene le informazioni sui dispositivi
     async function getDevicesInfo() {
