--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,15 +1,21 @@
 {% extends 'base.html' %}
 
+{% block styles %}
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/auth.css' ) }}">
+{% endblock %}
+
 {% block header %}
   <h1>{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
+<div class="content">
   <form method="post">
     <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <input type="text" name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Log In">
   </form>
+</div>
 {% endblock %}
