--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,79 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Titolo Predefinito{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     {% block styles %} 
         {# Inserire eventuali stili specifici per la pagina #}
     {% endblock %}
-    <style>
-        /* Reset e stili base */
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #2c3e50; /* Colore di sfondo scuro */
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        /* Allineamento orizzontale */
-        nav li {
-            float: left;
-        }
-
-        /* Stile dei link */
-        nav li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-        }
-
-        /* Cambia colore al hover */
-        nav li a:hover {
-            background-color: #34495e;
-        }
-
-        /* Stile per la scheda corrente */
-        nav li a.current {
-            background-color: #3498db;
-            font-weight: bold;
-        }
-
-        nav ul li.user-account {
-            margin-right: auto;
-        }
-
-        /* Stile per l'header */
-        header {
-            background-color: #3498db;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            margin-bottom: 0;
-        }
-
-        header h1 {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        /* Clearfix per il float */
-        nav::after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-    </style>
 </head>
 <body>
-    <header>
+    <header class="base-header">
         <h1>{% block header %}Intestazione Predefinita{% endblock %}</h1>
     </header>
-    <nav>
+    <nav class="base-nav">
         <ul>
             <li><a href="{{ url_for('main.index') }}" {% if request.endpoint == 'main.index' %}class="current"{% endif %}>Home</a></li>
             <li><a href="{{ url_for('main.dmx_management') }}" {% if request.endpoint == 'main.dmx_management' %}class="current"{% endif %}>Gestione DMX</a></li>
