--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,4 +1,17 @@
 /* Reset e stili base */
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    margin: 0;
+} 
+
+main {
+    flex: 1;
+}
+
 .base-nav ul {
     list-style-type: none;
     margin: 0;
@@ -67,4 +80,31 @@ footer {
     font-size: 0.85rem;
     border-top: 1px solid #eee;
     margin-top: 2rem;
+}
+
+/* Bottoni */
+.button {
+    background-color: #3498db;
+    color: white;
+    padding: 10px 20px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    cursor: pointer;
+
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.button:hover {
+    background-color: #3498db;
+    transform: translateY(-1px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.button:active {
+    background-color: #2980b9;
+    transform: translateY(2px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+.button:disabled {
+    background-color: #bdc3c7;
+    cursor: not-allowed;
 }
