--- a/app/templates/dmx_management.html
+++ b/app/templates/dmx_management.html
@@ -11,18 +11,18 @@
     <p>Fase corrente: <span id="current_phase_box"> . . . </span></p>
     <p>Messaggio: <span id="message_box"> . . . </span></p>
     <div>
-        <button onclick="initialize()">Inizializza</button>
-        <button onclick="reset()">Reset</button>
-        <button onclick="stampa()">Stampa</button>
+        <button class="button" onclick="initialize()">Inizializza</button>
+        <button class="button" onclick="reset()">Reset</button>
+        <button class="button" onclick="stampa()">Stampa</button>
         <br>
-        <button onclick="startLoop()">Avvia Loop</button>
-        <button onclick="stopLoop()">Ferma Loop</button>
+        <button class="button" onclick="startLoop()">Avvia Loop</button>
+        <button class="button" onclick="stopLoop()">Ferma Loop</button>
         <br>
-        <button onclick="pauseDMX()">Pausa</button>
-        <button onclick="resumeDMX()">Riprendi</button>        
+        <button class="button" onclick="pauseDMX()">Pausa</button>
+        <button class="button" onclick="resumeDMX()">Riprendi</button>        
     </div>
     <div>
-        <button onclick="getDevicesInfo()">Info Dispositivi</button>
+        <button class="button" onclick="getDevicesInfo()">Info Dispositivi</button>
         <div id="devices_info">
             . . .
         </div>
