--- a/app/templates/keyframes_form.html
+++ b/app/templates/keyframes_form.html
@@ -12,14 +12,15 @@
     <form method="POST" action="{{ url_for('devices.update_keyframe') }}">
         {% for keyframe in keyframes %}
             <div class="slider-container">
-                <label for="keyframeID-{{ keyframe.id }}">Keyframe {{ keyframe.description}}:</label>
-                <input type="range" id="keyframeID-{{ keyframe.id }}" name="keyframeID-{{ keyframe.id }}" min="0" max="255" value="{{ keyframe.value }}">
-                <span id="keyframeValue-{{ keyframe.id }}">{{ keyframe.value }}</span>
+                <label for="slider-{{ keyframe.id }}">Keyframe {{ keyframe.description}}:</label>
+                <input type="range" id="slider-{{ keyframe.id }}" name="slider-{{ keyframe.id }}" min="0" max="255" value="{{ keyframe.value }}">
+                <input type="hidden" id="resetSlider-{{ keyframe.id }}" name="resetSlider-{{ keyframe.id }}" value="{{ keyframe.value }}">
+                <span id="showSliderValue-{{ keyframe.id }}">{{ keyframe.value }}</span>
             </div>
         {% endfor %}
         <input type="hidden" name="device_id" id="device_id" value="{{ device.id }}">
         <button type="submit">Salva</button>
-        <button type="button" onclick=>Reset</button> 
+        <button type="button" onclick=resetSliders()>Reset</button> 
     </form>
 {% else %}
     <h2>Aggiungi nuovo Keyframe</h2>
@@ -32,19 +33,26 @@
 {% block scripts %}
     <script>
         // Funzione per aggiornare il valore del keyframe
-        function updateKeyframeValue(keyframeId) {
-            const slider = document.getElementById(`keyframe-${keyframeId}`);
-            const valueDisplay = document.getElementById(`keyframeValue-${keyframeId}`);
+        function updateSlidersValue(id) {
+            const slider = document.getElementById(`slider-${id}`);
+            const valueDisplay = document.getElementById(`showSliderValue-${id}`);
             valueDisplay.textContent = slider.value;
         }
 
         // Aggiungi un event listener a tutti gli slider
-        document.querySelectorAll('input[type="range"]').forEach(slider => {
-            slider.addEventListener('input', () => {
-                const keyframeId = slider.id.split('-')[1];
-                updateKeyframeValue(keyframeId);
+        {% for keyframe in keyframes %}
+            document.getElementById(`slider-{{ keyframe.id }}`).addEventListener('input', function() {
+                updateSlidersValue({{ keyframe.id }});
             });
-        });
+        {% endfor %}
+
+        // Funzione per resettare gli slider
+        function resetSliders() {
+            {% for keyframe in keyframes %}
+                document.getElementById(`slider-{{ keyframe.id }}`).value = document.getElementById(`resetSlider-{{ keyframe.id }}`).value;
+                updateSlidersValue({{ keyframe.id }});
+            {% endfor %}
+        }
 
     </script>
 {% endblock %}
